--- a/reportwidgets/clearcache/partials/_widget.htm
+++ b/reportwidgets/clearcache/partials/_widget.htm
@@ -6,6 +6,10 @@
             <li>cms/combiner<span><hide class="hidden"><?=$size['ccombiner_b']?></hide>&nbsp;<?=$size['ccombiner']?></span></li>
             <li>cms/twig<span><hide class="hidden"><?=$size['ctwig_b']?></hide>&nbsp;<?=$size['ctwig']?></span></li>
             <li>framework/cache<span><hide class="hidden"><?=$size['fcache_b']?></hide>&nbsp;<?=$size['fcache']?></span></li>
+            <li>temp/media<span><hide class="hidden"><?=$size['tempm_b']?></hide>&nbsp;<?=$size['tempm']?></span></li>
+            <li>temp/public<span><hide class="hidden"><?=$size['tempp_b']?></hide>&nbsp;<?=$size['tempp']?></span></li>
+            <li>temp/uploads<span><hide class="hidden"><?=$size['tempu_b']?></hide>&nbsp;<?=$size['tempu']?></span></li>
+            <li>temp files<span><hide class="hidden"><?=$size['tempf_b']?></hide>&nbsp;<?=$size['tempf']?></span></li>
         </ul>
     </div>
     <button type="button" class="btn btn-success" style="margin-left: 50px;"
